[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/enemy_bullet.gd" type="Script" id=1]
[ext_resource path="res://assets/Images/Lasers/ball_red_big1.png" type="Texture" id=2]
[ext_resource path="res://assets/Images/Lasers/ball_red_big2.png" type="Texture" id=3]
[ext_resource path="res://assets/Images/Lasers/ball_red_big3.png" type="Texture" id=4]
[ext_resource path="res://assets/Images/Lasers/ball_blue_big1.png" type="Texture" id=5]
[ext_resource path="res://assets/Images/Lasers/ball_blue_big2.png" type="Texture" id=6]
[ext_resource path="res://assets/Images/Lasers/ball_blue_big3.png" type="Texture" id=7]
[ext_resource path="res://assets/Images/Lasers/ball_green_big1.png" type="Texture" id=8]
[ext_resource path="res://assets/Images/Lasers/ball_green_big2.png" type="Texture" id=9]
[ext_resource path="res://assets/Images/Lasers/ball_green_big3.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="Animation" id=5]

resource_name = "disappear"
length = 0.3
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("frames0:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("frames1:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("frames2:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 2 ]
}

[node name="enemy_bullet" type="Area2D"]

position = Vector2( 217.486, 305.567 )
rotation = 1.5708
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="visibility" type="VisibilityNotifier2D" parent="."]

visible = false
position = Vector2( -4.57508, -6.56363 )
scale = Vector2( 20.9527, 8.17688 )
rect = Rect2( -10, -10, 20, 20 )
__meta__ = {
"_edit_lock_": true
}

[node name="frames0" type="AnimatedSprite" parent="."]

visible = false
light_mask = 2
position = Vector2( 2.43457, -5.97989 )
scale = Vector2( 0.510423, 0.510423 )
frames = SubResource( 1 )
animation = "default"
_sections_unfolded = [ "Material", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="frames1" type="AnimatedSprite" parent="."]

visible = false
light_mask = 2
position = Vector2( 2.43457, -5.97989 )
scale = Vector2( 0.510423, 0.510423 )
frames = SubResource( 2 )
animation = "default"
_sections_unfolded = [ "Material", "Transform", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="frames2" type="AnimatedSprite" parent="."]

visible = false
position = Vector2( 2.36514, -6.41972 )
scale = Vector2( 0.510423, 0.510423 )
frames = SubResource( 3 )
animation = "default"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="collision" type="CollisionShape2D" parent="."]

visible = false
position = Vector2( 2.80307, -6.21176 )
scale = Vector2( 1.51898, 1.51898 )
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="anim" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/disappear = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="area_entered" from="." to="." method="_on_enemy_bullet_area_enter"]

[connection signal="screen_exited" from="visibility" to="." method="_on_visibility_exit_screen"]

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]


